add_executable(runUnitTests tests.cpp SQLIdentifierTest.cpp HostTest.cpp)
target_link_libraries(runUnitTests shared GTest GMock GMockMain data)
add_test(NAME unittests COMMAND runUnitTests)
set_property(TEST unittests PROPERTY ENVIRONMENT "GTEST_OUTPUT=xml:unit.xml")
if (coverage)
    include(CodeCoverage)
    setup_target_for_coverage(runUnitTests_coverage runUnitTests coverage)
    setup_target_for_coverage_cobertura(runUnitTests_cobertura runUnitTests coverage --gtest_output=xml:coverage.junit.xml)
endif ()
